# wkey

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: rust.yml
assets/: default-config.toml  default-keyboard.txt  default-wkey-group.toml
docs/: cli-reference.md  configuration.md  development.md  getting-started.md  tui.md
src/: cli.rs  config.rs  display.rs  lib.rs  main.rs  model.rs  pipeout.rs  search.rs
src/ui/: keyboard.rs  mod.rs  render.rs
tests/: cli_bootstrap.rs  config_loading.rs  search_fzf.rs  search_only_cli.rs  ui_inline.rs
